--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode=development --progress --color --watch",
+    "dev": "webpack --mode=development --progress --color",
     "build": "rm -rf dist && webpack --mode=production --config webpack.config.pro.js"
   },
   "repository": {
