--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "auto-export-plugin",
-  "version": "1.2.0",
-  "description": "webpack auto export ",
+  "name": "webapck-plugin-add-try-catch",
+  "version": "1.0.0",
+  "description": "webapck-plugin-add-try-catch",
   "keywords": [
-    "webpack-plugin-auto-export",
-    "auto-export"
+    "webapck-plugin-add-try-catch"
   ],
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode=development --progress --color",
+    "dev": "webpack --mode=development --progress --color --watch",
     "build": "rm -rf dist && webpack --mode=production --config webpack.config.pro.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/layne0625/auto-export-plugin"
+    "url": "git+https://github.com/yanfangmin815/webapck-plugin-add-try-catch.git"
   },
   "files": [
     "dist"
   ],
-  "author": "layne_s@163.com",
+  "author": "yanfangmin_815@163.com",
   "license": "MIT",
   "dependencies": {
     "@babel/generator": "^7.4.4",
@@ -27,8 +26,7 @@
     "@babel/traverse": "^7.4.5",
     "babel-types": "^6.26.0",
     "chokidar": "^3.0.1",
-    "lodash": "^4.17.15",
-    "nodemon": "^2.0.2"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -36,5 +34,9 @@
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-node-externals": "^1.7.2"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/yanfangmin815/webapck-plugin-add-try-catch/issues"
+  },
+  "homepage": "https://github.com/yanfangmin815/webapck-plugin-add-try-catch#readme"
 }
