--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "webapck-plugin-add-try-catch",
-  "version": "2.0.0",
-  "description": "webapck-plugin-add-try-catch",
+  "name": "auto-add-try-catch",
+  "version": "0.1.2",
+  "description": "auto-add-try-catch",
   "keywords": [
-    "webapck-plugin-add-try-catch"
+    "auto-add-try-catch"
   ],
   "main": "dist/index.js",
   "scripts": {
