--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auto-try-catch",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "auto-try-catchh",
   "keywords": [
     "auto-try-catch"
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yanfangmin815/webapck-plugin-add-try-catch.git"
+    "url": "https://github.com/yanfangmin815/webapck-plugin-add-try-catch.git"
   },
   "files": [
     "dist"
